cmake_minimum_required(VERSION 2.8)
project(mytest)
add_subdirectory(src)
add_subdirectory(game)
add_subdirectory(external)
include_directories(src external feature game thirdparty thirdparty/asio thirdparty/lua)
link_directories(/usr/lib64/mysql ${PROJECT_SOURCE_DIR}/libs)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} game fusion external lua53 mysqlclient boost_system-mt dl lz4 z)
set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -pthread")
